# twili-rs

./: Cargo.toml  README.md  diesel.toml  setup.nu
db/: test.db
doc/adr/: 0001-record-architecture-decisions.md  0002-use-mutability-to-indicate-io.md  0003-use-sqlite-as-persistent-storage.md
migrations/2023-12-30-170135_create_tasks_table/: up.sql
src/: main.rs  presenter.rs  task_manager.rs
src/command/: edit.rs  interact.rs  list.rs  mod.rs  traits.rs
src/dao/: in_memory.rs  mod.rs
src/dao/sqlite/: mod.rs  models.rs  schema.rs
src/model/: mod.rs  task.rs  task_group.rs
src/presenter/: mod.rs
src/presenter/console/: mod.rs  task_formatter.rs
src/presenter/simple_console/: mod.rs
