[package]
name = "twili-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.31", features = ["serde"] }
clap = { version = "4.4.6", features = ["derive"] }
diesel = { version = "2.1.4", features = ["sqlite", "chrono"] }
libsqlite3-sys = { version = "0.27.0", features = ["bundled"] }
dotenvy = "0.15.7"
